--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-    background-image: url('../public/background.webp');
+    background-color:whitesmoke;
     background-size: 100%;
     
 }
