--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -45,6 +45,34 @@
 
 .App-link {
   color: #61dafb;
+  display: inline;
+
+}
+#Nav_menu {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+  background-color: darkgray;
+}
+
+.Nav_link:link {
+  color: #fff;
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  text-decoration: none;
+  padding-right: 2rem;
+}
+.Nav_link:hover {
+  color:blue;
+}
+
+.activeRoute {
+  border-bottom: 0.4rem solid teal;
+  cursor: not-allowed;
 }
 
 @keyframes App-logo-spin {
