--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+#header {
+  width: 100%;
+  height: 2cm;
+  border-bottom-color: black;
+  background-color: #efeae6;
+  text-align: center;
+}
 .header_shop {
   display: flex;
   align-items: center;
@@ -52,7 +59,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
+  height: 1cm;
   list-style-type: none;
   margin: 0;
   padding-left: 0;
